new texts for assignment and quizes

--- a/cs63320f19/mkdocs.yml
+++ b/cs63320f19/mkdocs.yml
@@ -11,8 +11,8 @@ plugins:
     - macros
 
 nav:
-    - Home:
-        - 'index.md'
+    # - Home:
+    #      - 'index.md'
     - General: 'general.md'
     - Schedule: 'schedule.md'
     - Papers: 'papers.md'
