--- a/cs63320f19/mkdocs.yml
+++ b/cs63320f19/mkdocs.yml
@@ -17,9 +17,8 @@ nav:
     - Schedule: 'schedule.md'
     - Papers: 'papers.md'
     - Projects: 'projects.md'
-    - Assignments:
-        - Assignments: 'assignments.md'
-        - quizzes: 'quizzes.md'
+    # - Assignments:
+    #    - quiz 01: 'quiz01.md'
     # - Piazza: 'http://www.piazza.com'
 
 markdown_extensions:
